--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container">
-                <img src="https://drive.google.com/thumbnail?id=1U5hDPKPpo66XJYxpV1K0ofjz1I63AOt_" 
-              class="img-circular" alt="mine picture" max-height="auto" max-width="100%">
               <div class="intro">
+                  <div class="masthead img-circular">
+                <img src="https://drive.google.com/thumbnail?id=1U5hDPKPpo66XJYxpV1K0ofjz1I63AOt_" 
+               alt="mine picture" max-height="auto" max-width="100%">
+              </div>
                 <div class="masthead-subheading">Hi! I am Nnamdi, welcome to my page! </div>
                 <div class="masthead-heading text-uppercase">I am a self-taught front-end web developer</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More ...</a>
