--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>pubYana</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/logoPubyana.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -41,7 +41,7 @@
             <div class="container">
               <div class="intro">
                   <div class="masthead img-circular">
-                <img src="https://drive.google.com/thumbnail?id=1U5hDPKPpo66XJYxpV1K0ofjz1I63AOt_" 
+                <img src="https://drive.google.com/thumbnail?id=1T8kXdP_VnUGKhIq3JaGXcT333IjlqpwE" 
                alt="mine picture" max-height="auto" max-width="100%">
               </div>
                 <div class="masthead-subheading">Hi! I am Nnamdi, welcome to my page! </div>
