--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                alt="mine picture" max-height="auto" max-width="100%">
               </div>
                 <div class="masthead-subheading">Hi! I am Nnamdi, welcome to my page! </div>
-                <div class="masthead-heading text-uppercase">I am a self-taught front-end web developer</div>
+                <div class="masthead-heading text-uppercase">I am a front-end web developer</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More ...</a>
             </div>
         </header>
