portfolio link updates

--- a/index.html
+++ b/index.html
@@ -94,13 +94,25 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
+                        <div class="p1">
+                            <a href="https://wiseupschoollagos.com/">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-chrome fa-sm" ></i> Live Link
+                            </button>
+                        </a>
+                        </div>
+                        <div class="p1">
+                            <a href="">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-github fa-sm" ></i> Repo Link
+                            </button>
+                        </a>
+                        </div>
+                        <div class="portfolio-item">       
+                                <!--<div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/w1.jpg" alt="..." />
-                            </a>
+                                </div> -->
+                                <!--<img class="img-fluid" src="assets/img/portfolio/w1.jpg" alt="..." /> -->                     
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">School</div>
                                 <div class="portfolio-caption-subheading text-muted">Website Design</div>
@@ -109,28 +121,56 @@
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 2-->
+                        <div class="p1">
+                            <a href="https://classy-sopapillas-422238.netlify.app/">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-chrome fa-sm" ></i> Live Link
+                            </button>
+                        </a>
+                        </div>
+                        <div class="p1">
+                            <a href="https://github.com/shagariboy/cuisine-website/tree/main">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-github fa-sm" ></i> Repo Link
+                            </button>
+                        </a>
+                        </div>
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
+                           <!-- <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2"> -->
+                                <!--<div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/c.jpg" alt="..." />
-                            </a>
+                                <img class="img-fluid" src="assets/img/portfolio/c.jpg" alt="..." /> 
+                            </a> -->
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Restaurant</div>
                                 <div class="portfolio-caption-subheading text-muted">Website Design</div>
-                            </div>
+                            </div> 
                         </div>
                     </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 3-->
+                        <div class="p1">
+                            <a href="https://classy-sopapillas-422238.netlify.app/">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-chrome fa-sm" ></i> Live Link
+                            </button>
+                        </a>
+                        </div>
+                        <div class="p1">
+                            <a href="https://github.com/shagariboy/html/tree/master/emailSignature">
+                            <button role="button" class="btn btn-primary" >
+                                <i class="fas fa-brands fa-github fa-sm" ></i> Repo Link
+                            </button>
+                        </a>
+                        </div>
                         <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <div class="portfolio-hover">
+                           <!-- <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3"> -->
+                                <!--<div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
                                 <img class="img-fluid" src="assets/img/portfolio/es.jpg" alt="..." />
-                            </a>
+                            </a> -->
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Business</div>
                                 <div class="portfolio-caption-subheading text-muted">Email Signature</div>
@@ -370,7 +410,7 @@
         </footer>
         <!-- Portfolio Modals-->
         <!-- Portfolio item 1 modal popup-->
-        <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <!--<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
@@ -379,7 +419,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">School</h2>
+                                    <!--<h2 class="text-uppercase">School</h2>
                                     
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/wLS.gif" alt="..." />
                                     <p>Built using HTML5, CSS3, and Wordpress. The client required a website that would showcase their school and what they offer.</p>
@@ -399,7 +439,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Portfolio item 2 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
