--- a/index.html
+++ b/index.html
@@ -375,11 +375,9 @@
                     <!-- has successfully submitted-->
                     <div class="d-none" id="submitSuccessMessage">
                         <div class="text-center text-white mb-3">
-                            <div class="fw-bolder">Form submission successful!</div>
-                            To activate this form, sign up at
-                            <br />
-                            <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                        </div>
+                            <div class="fw-bolder">Sent Successfully!</div>  <br>
+                            Happy to hear from you!!                 
+                         </div>
                     </div>
                     <!-- Submit error message-->
                     <!---->
