--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
+
         <title>pubYana</title>
+
+        
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/img/logoPubyana.png" />
+        <link rel="icon" type="image/x-icon" class="logo" href="assets/img/logoPubyana.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+       <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+       -->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -41,8 +46,7 @@
             <div class="container">
               <div class="intro">
                   <div class="masthead img-circular">
-                <img src="https://drive.google.com/thumbnail?id=1U5hDPKPpo66XJYxpV1K0ofjz1I63AOt_" 
-               alt="mine picture" max-height="auto" max-width="100%">
+                
               </div>
                 <div class="masthead-subheading">Hi! I am Nnamdi, welcome to my page! </div>
                 <div class="masthead-heading text-uppercase">I am a front-end web developer</div>
