--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Front-end development portfolio" />
+        <meta name="author" content="Nnamdi Ezeh" />
         <meta http-equiv="Content-Security-Policy" content="script-src 'none'">
 
         <title>pubYana</title>
