--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Front-end development portfolio" />
         <meta name="author" content="Nnamdi Ezeh" />
+        <meta name="title" property="og:title" content="pubYana" />
+        <meta property="og:type" content="Website" />
+        <meta name="image" property="og:image" content="https://imgur.com/a/4cIPiN7.png"/>
         
 
         <title>pubYana</title>
