--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Nnamdi Ezeh" />
         <meta name="title" property="og:title" content="pubYana" />
         <meta property="og:type" content="Website" />
-        <meta name="image" property="og:image" content="https://imgur.com/a/4cIPiN7.png"/>
+        <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51984947375_f2e8d948b4_b.jpg"/>
         
 
         <title>pubYana</title>
