--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                   <div class="masthead img-circular">
                 
               </div>
-                <div class="masthead-subheading">Hi! I am Nnamdi, welcome to my page! </div>
-                <div class="masthead-heading text-uppercase">I am a front-end web developer</div>
+                <div class="masthead-subheading">Hi! I am <span class="text-secondary"> Nnamdi</span>, welcome to my page! </div>
+                <div class="masthead-heading text-uppercase">A <span class="text-secondary">front-end web developer</span></div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More ...</a>
             </div>
         </header>
@@ -385,6 +385,8 @@
                         <a class="btn btn-dark btn-social mx-2" href="https://github.com/shagariboy/" aria-label="Github"><i class="fab fa-github"></i></a>
                         
                         <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/in/nnamdi-ezeh-2658031ba" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="mailto:nnamdiezeh0@gmail.com" aria-label="Gmail"><i class="fas fa-envelope"></i></a>
+                    </div>
                     </div>
                    <!--<div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
