--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <div class="masthead img-circular">
                 
               </div>
-                <div class="masthead-subheading">Hi! I am <span class="text-secondary"> Nnamdi</span>, welcome to my page! </div>
+                <div class="masthead-subheading">Hi! I am <span class="text-secondary"> Nnamdi</span></div>
                 <div class="masthead-heading text-uppercase">A <span class="text-secondary">front-end web developer</span></div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More ...</a>
             </div>
