--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <i class="fa-stack fa-6x">
-                                <i class="fa-brands fa-bootstrap fa-stack-2x"></i>
+                                <i class="fa-brands fa-react fa-stack-2x"></i>
                              </i>
-                            <h4>Bootstrap</h4>
+                            <h4>React</h4>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -368,7 +368,7 @@
                     </div>
                     <!-- Submit error message-->
                     <!---->
-                    <!-- This is what your users will see when there is-->
+                    <!-- This is what your users wll see when there is-->
                     <!-- an error submitting the form-->
                     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                     <!-- Submit Button-->
