--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Stacks</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#stacks">Stacks</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -255,14 +255,14 @@
             </div>
         </section>
         <!-- Team-->
-        <section class="page-section bg-light" id="team">
+        <section class="page-section bg-light" id="stacks">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">STACKS</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-html5 fa-stack-2x"></i>
                              </i>
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-css3 fa-stack-2x"></i>
                              </i>
@@ -278,7 +278,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-wordpress fa-stack-2x"></i>
                              </i>
@@ -286,7 +286,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-react fa-stack-2x"></i>
                              </i>
@@ -294,7 +294,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-python fa-stack-2x"></i>
                              </i>
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="team-member">
+                        <div class="stacks-member">
                             <i class="fa-stack fa-6x">
                                 <i class="fa-brands fa-js fa-stack-2x"></i>
                              </i>
@@ -361,7 +361,7 @@
                     <!-- This is what your users will see when the form-->
                     <!-- has successfully submitted-->
                     <div class="d-none" id="submitSuccessMessage">
-                        <div class="text-center text-white mb-3">
+                        <div class="text-center text-black mb-3">
                             <div class="fw-bolder">Sent Successfully!</div>  <br>
                             Happy to hear from you!!                 
                          </div>
