--- a/index.html
+++ b/index.html
@@ -405,6 +405,6 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-        <script src="//code.tidio.co/mg1xkezhl16canwfivyvnzja7c8xbkjq.js"></script>
+        <script src="//code.tidio.co/mg1xkezhl16canwfivyvnzja7c8xbkjq.js" async></script>
     </body>
 </html>
