--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-brands fa-stack-1x fa-searchengin fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">SEO Service</h4>
+                        <p class="text-muted">Website Optimization</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-envelope-open-text fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Email Signature</h4>
